src/main/java/com/example/demo/global/error/exception/CustomPersistenceException.java
package com.example.demo.global.error.exception;

// controller(예외 발생) - service - presentation
public class CustomPersistenceException extends BaseException{
}
